removing swagger error
